<resources>
    <string name="app_name">Application form</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--start screen-->
    <string name="send_application">Подать заявку</string>



    <!--application screen-->
    <string name="arrow_back">arrow_back</string>
    <string name="application_title">Заявка по подключение</string>
    <string name="choose_street">Выберите улицу</string>
    <string name="choose_house">Выберите дом</string>
    <string name="close_button">close button</string>
    <string name="house">Дом</string>
    <string name="sector">Корпус</string>
    <string name="flat">Квартира</string>
    <string name="send">Отправить</string>
    <string name="application_accepted">Ваша заявка принята в работу</string>
    <string name="congratulations_image">congratulations image</string>
    <string name="application_details">Ваша зявка №%1$d принята в работу, оператор свяжется с Вами в ближайшее время.</string>
    <string name="wrong_input_house">Такого дома нет в базе. Пожалуйста, введите номер дома и корпус вручную</string>

</resources>