<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".presentation.result.ui.ResultFragment">


    <ImageButton
        android:id="@+id/arrow_back_button"
        android:layout_width="@dimen/default_margin"
        android:layout_height="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/arrow_back"
        android:src="@drawable/icon_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/congratulations_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/congratulations_image"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/main_order_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/application_accepted"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/congratulations_image" />

    <TextView
        android:id="@+id/detail_order_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="23dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textColor="@color/dark_grey"
        android:text="@string/application_details"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_order_info" />

</androidx.constraintlayout.widget.ConstraintLayout>